Fix overflow issue with long commands, add default color schemes, apply layout on each new instance

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,7 +1,21 @@
 .nav {
+
   z-index: 19;
   display: flex;
   justify-content: space-between;
+
+  .bp3-button {
+    flex: 1 0 auto;
+  }
+
+  .collapsing {
+    flex: 0 1 auto;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+
 }
 
 .nav-heading {
